--- a/slike.html
+++ b/slike.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="stil.css" />
 </head>
 <body class="trećapozadina">
-	<h4><a href="actual stranica.html">povratak na prvu stranicu</a></h4>
+	<h4><a href="index.html">povratak na prvu stranicu</a></h4>
 	<header>Digitalni multimedij 1
 	<h1>Slikee~</h1>
 	<img src="krave.jpeg"/>
