zvuk i video.html

--- a/zvuk i video.html
+++ b/zvuk i video.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="stil.css" />
 </head>
 <body class="drugapozadina">
-	<h4><a href="actual stranica.html">povratak na prvu stranicu</a></h4>
+	<h4><a href="index.html">povratak na prvu stranicu</a></h4>
 	<header>Digitalni multimedij 1
 	<h3>Video~</h3>
 	<video width="400" height="" controls>
