--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<li><a href="https://artist-love-to-create.weebly.com/">Link na web stranicu s mojim radovima</a></li>
 			<li><a href="slike.html">html dokument nekih slika s interneta</a></li>
 			<li><a href="zvuk i video.html">html dokument s videom i zvukom s vježbi</a></li>
-			<li><a href="file:///C:/Users/Dita/Desktop/1%20Grafi%C4%8Dki/II%20semestar/Digitalni%20multimedij%201/3%20VIDEO,WEB%20(Premiere,%20Dreamweaver)/3%20i%204%20vje%C5%BEba/MERLIN/10_vje%C5%BEba_HTML.pdf">link na pdf dokument</a></li>
+			<li><a href="10_vježba_HTML.pdf">link na pdf dokument</a></li>
 		</ul>
 	</nav>
 	</div>
